--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <li class="nav-item"><a class="nav-link px-3" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link px-3" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link px-3" href="#contact">Contact</a></li>
+                    <li class="nav-item ms-lg-3"><a
+                            class="btn btn-outline-primary btn-sm rounded-pill px-4 mt-2 mt-lg-0"
+                            href="kadon_json_editor.html">JSON Editor</a></li>
                 </ul>
             </div>
         </div>
